# tiny-compiler

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  asm.h  ast.h  codes.h  compiler  defs.h  ebnf  gen.h  generator.h  input.h  lex.h  main.c  obj_printer.h  parser.h  program.src  stack.h  sym.h  symbol_table.h  virtual_machine.h  vm.h
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  config.h.in
examples/: program1  program2  program3
src/: CMakeLists.txt  asm.c  asm.h  asm_dumper.c  asm_dumper.h  ast.c  ast.h  codes.h  defs.h  error.c  error.h  func.c  func.h  gen.c  gen.h  generator.c  generator.h  input.c  input.h  lex.c  lex.h  lexer.c  lexer.h  main.c  node.h  parser.c  parser.h  stack.c  stack.h  sym.c  sym.h  symbol_table.c  symbol_table.h  var  virtual_machine.c  virtual_machine.h  vm.c  vm.h
